@@ -3,9 +3,10 @@ Version: 1.1.0
 Date: 02. 07. 2024
   Features:
     - TODO Add option for only 1 inserter per side of any assembling machine, furnace, etc. - need to hook into the rotation events.
-    - Add option to block the 2 or 4 tiles perpendicular to an inserter. TODO still need to hook into the rotation events, and test with robots.
+    - Add option to block the 2 or 4 tiles perpendicular to an inserter.
     - Added optional exception to placement rules for burner inserters.
     - Added distance-2 option for placement blocking.
+    - Show flying text message when robots are blocked from placing something. (Already existed for player placements.)
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 24. 06. 2024
